Add env file to root

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,12 @@
-sonar.projectKey=carlosdelblanco_202209-w6chwe-carlos-albert-rodrigo
-sonar.organization=carlosdelblanco
+sonar.projectKey=rodo08_202209-w7ch2-rodrigo-rosales-back
+sonar.organization=rodo08
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=202209-w7ch2-rodrigo-rosales-back
+#sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=./src
+#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
-
-sonar.test.inclusions=src/**/*.test.ts
-sonar.coverage.exclusions=src/setupTests.ts
-
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+#sonar.sourceEncoding=UTF-8
